<resources>
    <string name="app_name">ViPOS App</string>
    <string name="action_save">Save</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">ViPOS App</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="confirm_delete">Do you really want to Delete this card?</string>
    <string name="addBrand">Add Brand</string>
    <string name="sign_up">Sign Up</string>
    <string name="edit_brand">Edit brand</string>
    <string name="nav_menu_category">Category</string>
    <string name="nav_menu_customer">Customer</string>
    <string name="nav_menu_feature">Feature</string>
    <string name="nav_menu_supplier">Supplier</string>
    <string name="nav_menu_stock_location">Stock Location</string>
    <string name="return_button">Return</string>
    <string name="add_category_hint">Enter Category Name</string>
    <string name="add_category_name_hint">Enter Category Name</string>
    <string name="add_category_details_hint">Enter Category Details</string>
    <string name="addCategoryButton">Add Category</string>
    <string name="add_feature_name_hint">Enter name of the model</string>
    <string name="add_feature_ram_hint">Enter RAM</string>
    <string name="add_feature_rom_hint">Enter ROM</string>
    <string name="add_feature_processor_hint">Enter Processor</string>
    <string name="add_feature_os_hint">Enter Operating System</string>
    <string name="add_feature_front_camera_hint">Enter Front Camera pixels</string>
    <string name="add_feature_back_camera_hint">Enter Back Camera Pixels</string>
    <string name="add_feature_battery_hint">Enter Battery size</string>
    <string name="add_feature_cpu_hint">Enter CPU</string>
    <string name="add_feature_gpu_hint">Enter GPU</string>
    <string name="add_feature_sim_hint">Enter Sim support (Dual or Single)</string>
    <string name="add_feature_screen_hint">Enter Screen Size</string>
    <string name="add_feature_warranty_hint">Enter Warranty information</string>
    <string name="addFeatureButton">Update</string>
    <string name="editFeatureButton">Update</string>
    <string name="add_supplier_name_hint">Enter Supplier Name</string>
    <string name="add_supplier_address_hint">Enter Address</string>
    <string name="add_supplier_phone_number_hint">Enter Phone number</string>
    <string name="add_supplier_company_name_hint">Enter Company Name</string>
    <string name="editCategoryButton">Update</string>
    <string name="supplier_name_text_view">Supplier name</string>
    <string name="supplier_address_text_view">Supplier Address</string>
    <string name="supplier_phone_number_text_view">Supplier phone number</string>
    <string name="supplier_company_name_text_view">Supplier company name</string>
    <string name="category_name_text_view">Category name</string>
    <string name="category_details_text_view">Category Details</string>
    <string name="feature_ram_text_view">RAM</string>
    <string name="feature_name_text_view">Model Name:</string>
    <string name="feature_rom_text_view">ROM:</string>
    <string name="feature_processor_text_view">Processor</string>
    <string name="feature_os_text_view">Operating System:</string>
    <string name="feature_front_camera_text_view">Front Camera:</string>
    <string name="feature_back_camera_text_view">Back Camera:</string>
    <string name="feature_battery_text_view">Battery:</string>
    <string name="feature_cpu_text_view">CPU</string>
    <string name="feature_gpu_text_view">GPU</string>
    <string name="feature_sim_text_view">Sim:</string>
    <string name="feature_screen_text_view">Screen size:</string>
    <string name="feature_warranty_text_view">Warranty details:</string>
</resources>
